--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="image/loki.jfif" alt="Your Profile Picture" class="profile-picture">
+            <img src="loki.jfif" alt="Your Profile Picture" class="profile-picture">
             <h1>LOKITHAN G R</h1>
             <p>Student</p>
         </div>
