--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
     <section id="education">
         <div class="section-content">
             <h2>Education</h2>
-            <p>HSC - Sourashtra Higher Secondary School Paramakudi</p>
-            <p>BSc(Computer Science) - Government Arts College Paramakudi</p>
+            <p>HSC - Sourashtra Higher Secondary School Paramakudi.</p>
+            <p>BSc(Computer Science) - Government Arts College Paramakudi.</p>
         </div>
     </section>
 
@@ -141,8 +141,8 @@
         <div class="section-content">
             <h2>Projects</h2>
             <ul>
-                <li><a href="#">AI Based alternator control system</a></li>
-                <li><a href="#">Cloud Security IBM</a></li>
+                <li><a href="#">Project 1</a></li>
+                <li><a href="#">Project 2</a></li>
                 <!-- Add more project links here -->
             </ul>
         </div>
